# bevy_game_template

./: .gitignore  Cargo.toml  Makefile.toml  README.md  Trunk.toml  bevy_game-3e510a4f2d3b840c.js  bevy_game-53e521c36aed1e2a.js  bevy_game-57d2833d1932439.js  bevy_game-586558bf2fd35aa8.js  bevy_game-5c893d17073cc9ff03218bb960ea0fb550327453b4f26b62116d1f5781fb66502021ce1b5d6b18fdc5581300cbca70ae.js  bevy_game-6edbcecd7365830a.js  bevy_game-7fe35c4162465120.js  bevy_game-93807355c37610ff.js  bevy_game-a21b06dc4bf6824b.js  bevy_game-a8c70765fd7d3f0d.js  bevy_game-ab288d44b9318c8d.js  bevy_game-b35ec8ff48b9f45c.js  bevy_game-b6f96b75a1bbf506.js  bevy_game-ba377c65fdef1b0d.js  bevy_game-e90de3f07148398c.js  build.rs  cargo-generate.toml  flake.nix  index-1a5852583f09ac83.js  index.html  pre-script.rhai  rust-toolchain  rust-toolchain.toml  shell.nix
.github/workflows/: ci.yml  deploy-page.yaml  release-android-google-play.yaml  release-ios-testflight.yaml  release.yaml
credits/: CREDITS.md
credits/licenses/: Bevy_MIT_License.md
game_plugin/: Cargo.toml
game_plugin/src/: actions.rs  audio.rs  lib.rs  loading.rs  menu.rs  player.rs
game_plugin/src/loading/: paths.rs
mobile/: .gitignore  Cargo.toml  Makefile  build_rust_deps.sh  manifest.yaml
mobile/ios-src/: Info.plist  LaunchScreen.storyboard
mobile/ios-src/Assets.xcassets/AppIcon.appiconset/: Contents.json
mobile/mobile.xcodeproj/: project.pbxproj
mobile/mobile.xcodeproj/xcshareddata/xcschemes/: mobile.xcscheme
mobile/src/: lib.rs
src/: actions.rs  audio.rs  game_control.rs  lib.rs  loading.rs  main.rs  menu.rs  player.rs
src/actions/: game_control.rs  mod.rs
src/core/: controller.rs  level_manager.rs  mod.rs
src/default/: actions.rs  audio.rs  loading.rs  menu.rs  mod.rs  player.rs  plugins.rs  state.rs  window.rs
src/editor/: editor.rs  interaction.rs  mod.rs  plugin.rs  simple_scene.rs
src/maps/: main_menu.rs  mod.rs  simple_scene.rs  simple_scene2.rs
src/ui/: button.rs  interaction.rs  mod.rs  style.rs
src/ui/counter/: actions.rs  facade.rs  mod.rs  plugin.rs  reducer.rs  store.rs  template.rs  ui.rs
src/ui/gameplay/: button.rs  interaction.rs  mod.rs  plugin.rs  widgets.rs
src/ui/main_menu/: main_menu.rs  mod.rs
src/ui/todomvc/: todo.rs
