[package]
name = "game_plugin"
version = "0.1.0"
publish = false
authors = ["Niklas Eicker <git@nikl.me>"] # ToDo: you are the author ;)
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
    "bevy/bevy_gltf",
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
    "bevy_kira_audio/ogg"
]

native = [
    "bevy/bevy_wgpu",
]

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", rev = "f6b42b86691bdea92613df3e1e754dbc9455dbc2", default-features = false }
bevy_kira_audio = { git = "https://github.com/NiklasEi/bevy_kira_audio", rev = "b0a8659c7e43c2625695409152cce7b1b339be2a" }
bevy_asset_loader = { git = "https://github.com/NiklasEi/bevy_asset_loader", rev = "6175cbb5629e18d15162983004e4f7592c31f552" }
rand = "0.8.3"
