[package]
name = "game_plugin"
version = "0.1.0"
publish = false
authors = ["Niklas Eicker <git@nikl.me>"] # ToDo: you are the author ;)
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
    "bevy/bevy_gltf",
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
    "bevy_kira_audio/ogg"
]

native = [
    "bevy/bevy_wgpu",
]

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", rev = "6a8a8c9d21f32e0e46623db9438813b009f9e014", default-features = false }
bevy_kira_audio = { git = "https://github.com/NiklasEi/bevy_kira_audio", rev = "1c6f7a23713abcb942fde047c78c35c3a70eae6b" }
bevy_asset_loader = { git = "https://github.com/NiklasEi/bevy_asset_loader", rev = "b1916e76d81aeb5097dadf7c0458488e670deb47" }
rand = "0.8.3"
